fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-050-fda399bfe0.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<VStack boxSize="100%">
  <Box h="50px" w="100%" />
</VStack>"
