fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-051-53df7b9474.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Flex boxSize="100%">
  <Box h="100%" w="50px" />
</Flex>"
