fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-052-e6195ba5a2.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Box boxSize="100%">
  <Box h="50px" maxW="200px" w="100%" />
</Box>"
