fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-056-834fa66895.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box boxSize="64px" />"
