fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-058-a5bed8edb7.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Flex alignItems="center" boxSize="100%" justifyContent="space-between" />"
