fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-061-1c44313e59.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<VStack alignItems="center" h="200px" justifyContent="space-between" w="120px">
  <Box boxSize="100%" />
  <Box boxSize="100%" />
</VStack>"
