fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-062-4fdcb21c9d.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Center boxSize="120px" />"
